# goit-pythonweb-hw-06

./: pyproject.toml
alembic/: env.py
alembic/versions/: cfadfd713a05_init.py
app/: cli.py  db.py  models.py  my_select.py  seed.py
